SSCSCI-2081: enable WA config in demo (#4910)
* remove demo sync (#4740)

* Update sscs-tribunals-frontend Docker tag to v0.2.51 (#4742)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update Networking (#4745)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update dependency com.github.hmcts:ccd-client to v5.1.0 (#4741)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update Automated Checks (#4744)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* sscs-common bump (#4755)

* Update flyway to v11.8.2 (#4751)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update dependency com.github.hmcts:send-letter-client to v5.0.4 (#4747)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update dependency hashicorp/terraform to v1.12.0 (#4748)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* SSCSCI-1836 - remove fqpm and medical member (#4730)

* remove fqpm and medical member

* show condition

* remove typo

* move appeal to prod

* event order

---------

Co-authored-by: gokul <69240498+gokul-sol@users.noreply.github.com>

* SSCSCI-1851 updating event permissions to fta users (#4726)

* updating event permissions to fta users

* updates

---------

Co-authored-by: WillOrchard <127200688+WillOrchard@users.noreply.github.com>

* Update Docker (#4758)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update dependency org.pitest:pitest to v1.19.4 (#4766)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* template fix (#4761)

* Update sscs-tribunals-frontend Docker tag to v0.2.53 (#4765)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update Networking to v5.5.5 (#4771)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.norep